--- a/Chapter1.ipynb
+++ b/Chapter1.ipynb
@@ -16,14 +16,29 @@
     "- python, c++ api 기본적으로 제공\n",
     "- javascript, java, go, swift 등 다양한 프로그래밍 언어 지원\n",
     "- 모바일 기기, 웹, 임베디드 시스템 등 거의 모든 기기에서 실행 가능\n",
-    "- Tensor 객체 이용해서 풍부한 연산 라이브러리 제공"
+    "- Tensor 객체 이용해서 풍부한 연산 라이브러리 제공\n",
+    "- ex) 인공신경망 계산시에 행렬 계산을 해준다."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "인공 신경망 계산시에 행렬 계산을 해주는 것 : tensorflow"
+    "## tensorflow import\n",
+    "```python\n",
+    "import tensorflow as tf\n",
+    "```\n",
+    "\n",
+    "## tensorflow 버전 선택\n",
+    "```python\n",
+    "try:\n",
+    "    # %가 붙은 명령 : 매직 커맨드\n",
+    "    # %tensorflow_version : tensorflow의 버전을 선택하는 기능\n",
+    "    %tensorflow_version 원하는버전\n",
+    "except Exception:\n",
+    "    pass\n",
+    "import tensorflow as tf\n",
+    "```"
    ]
   },
   {
@@ -64,6 +79,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Magic Command란?\n",
+    "- IPython 시스템에서 제공하는 추가기능을 추가하는 기능\n",
+    "- %, %%를 맨 앞에 붙인다.\n",
+    "    - % : 한 줄의 코드에서 실행\n",
+    "    - %% : 한 셀의 내용 전체에서 실행\n",
+    "- 사용방법 궁금할 때 : 맨 뒤에 ?를 붙여준다. ex) %time?\n",
+    "\n",
+    "- magic command 종류\n",
+    "    - %time : 코드 실행 시간 측정"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -88,7 +118,7 @@
       "memory_limit: 268435456\n",
       "locality {\n",
       "}\n",
-      "incarnation: 8259109035148105365\n",
+      "incarnation: 4618363424604358813\n",
       "]\n"
      ]
     }
@@ -120,6 +150,8 @@
    "metadata": {},
    "source": [
     "## 참고\n",
+    "- Tensor 객체 : https://www.tensorflow.org/api_docs/python/tf/Tensor\n",
+    "- Tensor data type : https://www.tensorflow.org/api_docs/python/tf/dtypes/DType\n",
     "- Tensorflow Tutorial : https://www.tensorflow.org/tutorials?hl=ko\n",
     "- Tensorflow API : https://www.tensorflow.org/api_docs/python/tf?hl=ko"
    ]
