--- a/Chapter1.ipynb
+++ b/Chapter1.ipynb
@@ -149,6 +149,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Tensor 객체 수학적 계산\n",
+    "- tf.reduce_max(x, axis=0) : axis를 기준으로 한 최대값\n",
+    "- tf.reduce_min(x, axis=0) : axis를 기준으로 한 최소값\n",
+    "- tf.reduce_sum(x, axis=0) : axis를 기준으로 한 원소 합\n",
+    "- tf.reduce_mean(x, axis=0) : axis를 기준으로 한 평균값\n",
+    "- tf.reducee-prod(x, axis=0) : axis를 기준으로 한 원소들의 곱\n",
+    "- tf.matmul(x, y) : 행렬 x, y의 행렬곱"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 참고\n",
     "- Tensor 객체 : https://www.tensorflow.org/api_docs/python/tf/Tensor\n",
     "- Tensor data type : https://www.tensorflow.org/api_docs/python/tf/dtypes/DType\n",
