--- a/Tensorflow GPU 사용여부 확인.ipynb
+++ b/Tensorflow GPU 사용여부 확인.ipynb
@@ -25,7 +25,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.1.0\n"
+      "2.3.1\n"
      ]
     }
    ],
@@ -59,41 +59,24 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Tue Oct 20 09:20:28 2020       \n",
-      "+-----------------------------------------------------------------------------+\n",
-      "| NVIDIA-SMI 456.43       Driver Version: 456.43       CUDA Version: 11.1     |\n",
-      "|-------------------------------+----------------------+----------------------+\n",
-      "| GPU  Name            TCC/WDDM | Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
-      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
-      "|===============================+======================+======================|\n",
-      "|   0  GeForce RTX 2070   WDDM  | 00000000:01:00.0  On |                  N/A |\n",
-      "| 45%   26C    P8     8W / 175W |    423MiB /  8192MiB |      5%      Default |\n",
-      "+-------------------------------+----------------------+----------------------+\n",
-      "                                                                               \n",
-      "+-----------------------------------------------------------------------------+\n",
-      "| Processes:                                                                  |\n",
-      "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
-      "|        ID   ID                                                   Usage      |\n",
-      "|=============================================================================|\n",
-      "|    0   N/A  N/A      1072    C+G   Insufficient Permissions        N/A      |\n",
-      "|    0   N/A  N/A      8224    C+G   C:\\Windows\\explorer.exe         N/A      |\n",
-      "|    0   N/A  N/A      9056    C+G   ...artMenuExperienceHost.exe    N/A      |\n",
-      "|    0   N/A  N/A      9196    C+G   ...w5n1h2txyewy\\SearchUI.exe    N/A      |\n",
-      "|    0   N/A  N/A      9852    C+G   ...ekyb3d8bbwe\\YourPhone.exe    N/A      |\n",
-      "|    0   N/A  N/A     11432    C+G   ...me\\Application\\chrome.exe    N/A      |\n",
-      "|    0   N/A  N/A     12284    C+G   ...qxf38zg5c\\Skype\\Skype.exe    N/A      |\n",
-      "|    0   N/A  N/A     13076    C+G   ...y\\ShellExperienceHost.exe    N/A      |\n",
-      "|    0   N/A  N/A     13124    C+G   ...es.TextInput.InputApp.exe    N/A      |\n",
-      "+-----------------------------------------------------------------------------+\n"
+      "'nvidia-smi'은(는) 내부 또는 외부 명령, 실행할 수 있는 프로그램, 또는\n",
+      "배치 파일이 아닙니다.\n"
      ]
     }
    ],
    "source": [
     "!nvidia-smi"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
